Added canonical link tags, updated titles, added an alt tag for an image on conceptual design 1

--- a/conceptual-design-1.html
+++ b/conceptual-design-1.html
@@ -24,6 +24,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org/conceptual-design-1.html" />
 </head>
 <body>
 <div class="container">
@@ -51,9 +54,9 @@
             A user-definable checklist is the essence of this solution.
         </p>
         <figure>
-            <!-- <img width="230" height="297" src="images/Morning%20Ritual%20Page.png"/>-->
 
-            <img src="images/Morning%20Ritual%20Page.png"/>
+
+            <img alt="A whiteboard-based check list with fixed number of entries but user enterable text for list items" src="images/Morning%20Ritual%20Page.png"/>
             <figcaption>A simple non-technical solution implemented with a chalkboard (or whiteboard) with fixed
                 number of user definable habits. The user clears the checkboxes daily.
             </figcaption>
