--- a/conceptual-design.html
+++ b/conceptual-design.html
@@ -24,6 +24,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org/conceptual-design.html" />
 </head>
 <body>
 <div class="container">
