--- a/detailed-design-habit-supports.html
+++ b/detailed-design-habit-supports.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mindful Progress-Project Goals</title>
+    <title>Mindful Progress-Detailed Design - Habit Support Mechanisms</title>
     <meta name="description" content="">
     <meta name="author" content="Alan May">
 
@@ -23,13 +23,16 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org/detailed-design-habit-supports.html" />
 </head>
 <body>
 <div class="container">
 
     <header class="row">
         <div class="centered">
-            <h1>Detailed Design</h1>
+            <h1>Detailed Design - Habit Support Mechanisms</h1>
         </div>
 
     </header>
