--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org" />
 </head>
 <body>
 <div class="container">
