--- a/detailed-design.html
+++ b/detailed-design.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mindful Progress-Project Goals</title>
+    <title>Mindful Progress-Detailed Design</title>
     <meta name="description" content="">
     <meta name="author" content="Alan May">
 
@@ -23,6 +23,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org/detailed-design.html" />
 </head>
 <body>
 <div class="container">
