--- a/personas.html
+++ b/personas.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mindful Progress-Design Criteria</title>
+    <title>Mindful Progress-Personas</title>
     <meta name="description" content="">
     <meta name="author" content="Alan May">
 
@@ -24,6 +24,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Cannonical URL -->
+    <link rel="canonical" href="http://design.mindfulprogress.org/personas.html" />
 </head>
 <body>
 <div class="container">
