Adding links to github project and backlinks in the readme.markdown file

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <div class="row">
             <div class="centered processes"><a class="centered" href="detailed-design.html">Detailed Design</a></div>
         </div>
+        <div class="row">
+            <div class="centered processes"><a class="centered" href="https://github.com/alanmay/design-mindfulprogressionorg">Source Files on GitHub</a></div>
+        </div>
 
     </nav>
     <footer>
