Adding on boarding mockups, adding to read me, research

--- a/detailed-design.html
+++ b/detailed-design.html
@@ -39,8 +39,16 @@
 
 
     <main>
+        <h3>Version 1 Mockups</h3>
         <p>
-        Low fidelity mockups, and a prototype will be deployed here as the next deliverable.  Iterative user testing
+        <a href="mockups/v1/emotional%20onboarding.pdf">Onboarding mockups</a>
+
+        <a href="onboarding-video1-transcript.html">Onboarding Video Transcript</a>
+        </p>
+
+        <p>
+
+            Mockups and prototypes will be deployed here as they are produced.  Iterative user testing
         will be performed on these deliverables to test whether users feel the proposed solution is fitting their needs
         and gathering additional feedback on the exact nature of those needs.
         </p>
