--- a/secondary-research.html
+++ b/secondary-research.html
@@ -66,16 +66,19 @@
 
         <h2>Key Sources of Inspiration</h2>
         <ul>
+
+            <li>Presentations from Robin Krieglstein at the Austin PsychTech ATX Meetup (Robin is the founder and a
+                generous contributor)
+            </li>
             <li>The work of BJ Fogg, especially the concepts of the Behavior Model and Tiny Habits (bjfogg.com,
                 bjfogg.org)
             </li>
             <li>Stephen Wendel's book, "Designing for Behavior Change"</li>
             <li>Kelly McGonigal book, "The Willpower Instinct"</li>
             <li>Nir Eval's book, "Hooked"</li>
-            <li>Presentations from Robin Krieglstein at the Austin PsychTech ATX Meetup (Robin is the founder and a
-                generous contributor)
-            </li>
-            <li>Luke Wroblewski Presentation at Igniters Meetup at Stanford- Design hacking for startups</li>
+            <li>Charlie Rose Brain Series featuring Dr. Eric Kandel</li>
+            <li>Luke Wroblewski Presentation at Igniters Meetup at Stanford- Design hacking for startups - for some interesting thinking about topics like ergonomics and
+            responsive design input management</li>
 
         </ul>
         <h2>Literature Review</h2>
@@ -84,7 +87,19 @@
             This section is still under development.
         </p>
 
-        Habit Formation
+        <h4>Behavior</h4>
+
+        One of Merriam Webster's definitions for behavior is "anything that an organism does involving action and response to stimulation". (Behavior, www.merriam-webster.com)
+
+
+
+
+
+
+
+
+
+        <h4>Habit Formation</h4>
 
         <ul>
             <li>Habit Formation for a healthy daily habit - Based on self-reported user ratings, the strength of an
@@ -118,6 +133,13 @@
             </li>
 
         </ul>
+
+        Citations
+
+        Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior
+
+
+
     </main>
     <footer>
         <nav>
