Switching to /styles directory from /css and adding relative path urls that are relative to document root.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/mindfulprogress.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/skeleton.css">
+    <link rel="stylesheet" href="/styles/mindfulprogress.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Cannonical URL -->
     <link rel="canonical" href="http://design.mindfulprogress.org" />
@@ -40,27 +40,27 @@
 
     <nav>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="project-goals.html">Project Goals</a></div>
+            <div class="centered processes"><a class="centered" href="/project-goals.html">Project Goals</a></div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="needs-finding.html">Needs Finding</a></div>
+            <div class="centered processes"><a class="centered" href="/needs-finding.html">Needs Finding</a></div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="personas.html">Personas</a></div>
+            <div class="centered processes"><a class="centered" href="/personas.html">Personas</a></div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="secondary-research.html">Secondary Research</a>
+            <div class="centered processes"><a class="centered" href="/secondary-research.html">Secondary Research</a>
             </div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="design-criteria.html">Design Criteria</a></div>
+            <div class="centered processes"><a class="centered" href="/design-criteria.html">Design Criteria</a></div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="conceptual-design.html">Conceptual Design
+            <div class="centered processes"><a class="centered" href="/conceptual-design.html">Conceptual Design
                 Exploration</a></div>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="detailed-design.html">Detailed Design</a></div>
+            <div class="centered processes"><a class="centered" href="/detailed-design.html">Detailed Design</a></div>
         </div>
         <div class="row">
             <div class="centered processes"><a class="centered" href="https://github.com/alanmay/design-mindfulprogressorg">Source Files on GitHub</a></div>
