--- a/conceptual-design-3.html
+++ b/conceptual-design-3.html
@@ -17,13 +17,13 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/mindfulprogress.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/skeleton.css">
+    <link rel="stylesheet" href="/styles/mindfulprogress.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Cannonical URL -->
     <link rel="canonical" href="http://design.mindfulprogress.org/conceptual-design-3.html" />
@@ -79,7 +79,7 @@
         </p>
 
         <h3>Flowchart for daily flow</h3>
-        <a href="dailyflowchart.graffle.pdf">This</a> flow chart describes the daily flow of the user.
+        <a href="/dailyflowchart.graffle.pdf">This</a> flow chart describes the daily flow of the user.
         <p></p>
 
 
@@ -186,7 +186,7 @@
     </main>
     <footer>
         <nav>
-            <a href="index.html">Home</a><a href="conceptual-design.html">Next - Conceptual Design</a>
+            <a href="/index.html">Home</a><a href="/conceptual-design.html">Next - Conceptual Design</a>
         </nav>
         <div class="centered big-margin"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img
                 alt="Creative Commons License" style="border-width:0"
