--- a/conceptual-design.html
+++ b/conceptual-design.html
@@ -17,13 +17,13 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/mindfulprogress.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/skeleton.css">
+    <link rel="stylesheet" href="/styles/mindfulprogress.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Cannonical URL -->
     <link rel="canonical" href="http://design.mindfulprogress.org/conceptual-design.html" />
@@ -47,11 +47,11 @@
                 immediate on rising, before doing anything else.
             </li>
         </ul>
-        <p><a href="conceptual-design-1.html">Conceptual Design - Concept 1</a></p>
+        <p><a href="/conceptual-design-1.html">Conceptual Design - Concept 1</a></p>
 
-        <p><a href="conceptual-design-2.html">Conceptual Design - Concept 2</a></p>
+        <p><a href="/conceptual-design-2.html">Conceptual Design - Concept 2</a></p>
 
-        <p><a href="conceptual-design-3.html">Conceptual Design - Concept 3</a></p>
+        <p><a href="/conceptual-design-3.html">Conceptual Design - Concept 3</a></p>
 
         <h3>Discussion</h3>
 
@@ -77,7 +77,7 @@
     </main>
     <footer>
         <nav>
-            <a href="index.html">Home</a><a href="detailed-design.html">Next - Detailed Design</a>
+            <a href="/index.html">Home</a><a href="/detailed-design.html">Next - Detailed Design</a>
         </nav>
         <div class="centered big-margin"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img
                 alt="Creative Commons License" style="border-width:0"
