Updating needs finding survey 3 data with most recent surveys

--- a/needs-finding.html
+++ b/needs-finding.html
@@ -181,14 +181,13 @@
             <h4>Methodology</h4>
             <ul>
                 <li>Survey respondent recruitment was done through the austin.craigslist.org site.</li>
-                <li>There were 17 respondents as of October 14, 2015. This has a number of biases and is not statistically
-                    significant.
+                <li>There were 37 respondents as of February 2, 2016.
                 </li>
                 <li>Respondents were not paid for their efforts. I am sincerely grateful for their participation and
                     contribution to this project.
                 </li>
                 <li>This was the first survey conducted as an early gauge of interest.</li>
-                <li>Respondents were 88% female. This raises an interesting question as to whether this was due to women
+                <li>Respondents were >86% female. This raises an interesting question as to whether this was due to women
                     having more of an interest in volunteering - or if they had more of an interest in the topic itself.
                     The group of respondents had a wide age range.
                 </li>
