Detailed design (new mockups) and secondary research additions

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -25,7 +25,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Cannonical URL -->
-    <link rel="canonical" href="http://design.mindfulprogress.org/secondary-research.html" />
+    <link rel="canonical" href="http://design.mindfulprogress.org/secondary-research.html"/>
 </head>
 <body>
 <div class="container">
@@ -42,26 +42,11 @@
         <p>
             My background is not in brain research, so I feel quite susceptible to overgeneralizing research findings,
             making naïve assumptions, or being subject
-            to other biases. I am interested in making relevant corrections as I attempt to translate these learnings
+            to other biases. I am interested in making relevant corrections as I attempt to translate these research
+            results
             into lay language and apply them to software designs. If you have
             corrections or can suggest additional relevant research, please send these to
             <a href="mailto:alan@mindfulprogression.org?Subject=Mindful%20Progress%20Research" target="_top">alan@mindfulprogression.com</a>
-
-
-        </p>
-        <p>
-            The brain is a marvelously complex instrument and brain research, while making tremendous strides, is still
-            in
-            its relative infancy. The brain uses 20% of the bodies blood supply and 20% of the oxygen, despite it only
-            accounting
-            for 2% of the total mass of the body. The brain contains more than 100 billion neurons and each connects
-            with between
-            1000 and 10,000 other cells. The size of this network of nerve cells is staggering and many scientists have
-            labored long in laboratories to give birth to our current understandings of this structure. Tremendous
-            advances
-            have been made possible by FMRI and other imaging technologies to help researchers map reactions and
-            behaviors
-            to structures in the brain.
         </p>
 
         <h2>Key Sources of Inspiration</h2>
@@ -70,78 +55,234 @@
             <li>Presentations from Robin Krieglstein at the Austin PsychTech ATX Meetup (Robin is the founder and a
                 generous contributor)
             </li>
-            <li>The work of BJ Fogg, especially the concepts of the Behavior Model and Tiny Habits (bjfogg.com,
+            <li>The work of Dr. BJ Fogg, especially the concepts of the Behavior Model and Tiny Habits (bjfogg.com,
                 bjfogg.org)
             </li>
             <li>Stephen Wendel's book, "Designing for Behavior Change"</li>
-            <li>Kelly McGonigal book, "The Willpower Instinct"</li>
+            <li>Kelly McGonigal's book, "The Willpower Instinct"</li>
             <li>Nir Eval's book, "Hooked"</li>
             <li>Charlie Rose Brain Series featuring Dr. Eric Kandel</li>
-            <li>Luke Wroblewski Presentation at Igniters Meetup at Stanford- Design hacking for startups - for some interesting thinking about topics like ergonomics and
-            responsive design input management</li>
+            <li>The Brain with David Eagleman - PBS series</li>
+
 
         </ul>
+
+
         <h2>Literature Review</h2>
 
+        <h4>The Brain, A Remarkable Structure</h4>
+
         <p>
-            This section is still under development.
+            The brain is a marvelously complex instrument and brain research while making tremendous strides, is still
+            in its relative infancy. The brain contains more than 100 billion neurons and each connects
+            with between
+            1000 and 10,000 other cells. ("Neurons & Synapses - Memory & the Brain - The Human Memory") Consider that
+            you have
+            25 billion more neurons in your brain than the number of devices of any kind expected to be connected to the
+            Internet by 2020 (Danova, 2013)
+            The size of this network of nerve cells in each of us is staggering. Many scientists have
+            labored long in laboratories to give birth to our current understandings of this structure. Tremendous
+            advances
+            have been made possible by Functional Magnetic Resonance Imaging (FMRI) and other imaging technologies to
+            help
+            researchers map reactions and
+            behaviors to structures in the brain.
         </p>
 
-        <h4>Behavior</h4>
+        <p>
+            The human brain has evolved over time and contains three major brains within itself that remarkably function
+            concurrently. The reptilian complex, the brain stem,
+            is the oldest region of the brain and is responsible for maintaining alertness and survival, along with
+            managing
+            autonomic nervous system functions such as breathing, temperature regulation, and circulation of the blood
+            via the heart. As its name implies, we share this structure with reptiles. Fight or flight responses to
+            threats
+            are triggered from this region and are driven by instincts.
+            The limbic system, a brain shared with mammals, is the next system that evolved and is thought to be the
+            seat of
+            emotion. While the reptilian brain is focused on individual survival, the mammalian brain also is concerned
+            with the
+            individual in the context of a community. The neocortex, the
+            latest region to evolve, is responsible for abstract reasoning.(The Brain from Top to Bottom)
+            Through studying patients with brain damage in areas connecting the emotional and reasoning centers in the
+            brain, that
+            using the neocortex alone for decision making was not sufficient to arrive at sound decisions.
+            ("How do I decide? The Brain with David Eagleman", 2015)
+        </p>
 
-        One of Merriam Webster's definitions for behavior is "anything that an organism does involving action and response to stimulation". (Behavior, www.merriam-webster.com)
+        <p>
+            The brain can further be divided into
+            regions that are seats for various functions, such as regions that handle feedback from
+            our senses such as visual processing. Within the visual processing system, there are many subsystems, for
+            managing
+            issues we completely take for granted, such as being able to detect edges on surfaces, being able to store
+            visual memories, and to be able to recognize that a shape is a human face then match it to a known face.
+            ("Visual Processing: Cortical Pathways ") There are many
+            such systems in the brain. (http://neuroscience.uth.tmc.edu/s2/chapter15.html)
 
+        </p>
 
-
-
-
-
-
-
-
-        <h4>Habit Formation</h4>
-
+        <p>
+            When we imagine all the activities that the mind must
+            process as we traverse our everyday lives, it is incredible that our minds can:
+        </p>
         <ul>
-            <li>Habit Formation for a healthy daily habit - Based on self-reported user ratings, the strength of an
-                added healthy habit grew quickly then plateaued at an average of 66 days (following an
-                asymptotic curve).
-
-            <ul>
-                <li>However, the range users reached 95% of their asymptote, was from 18-254 days,
-                    highlighting the immense variability between subjects to solidify their habits.
-                </li>
-                <li>Habits involving simpler actions were generally built more quickly than complex ones.</li>
-                <li>Habit formation was not appreciably impacted by missing a day</li>
-                <li>Extrensic rewards were not provided, but the subjects were allowed to select the habit to build</li>
-            </ul>
+            <li>continuously sample and process the input of all of our senses,</li>
+            <li>within our consciousness, have access to an understandable representation of our immediate
+                surroundings
             </li>
-            <cite>Source: <a href="http://onlinelibrary.wiley.com/doi/10.1002/ejsp.674/abstract">Lally, P., van
+            <li>keep our organs and vital systems functioning</li>
+            <li>allow us to anticipate events in the future, and remember past events through visual, auditory,
+                olfactory,
+            </li>
+            <li>enable us to love other members of our species</li>
+        </ul>
+        <p>
+            We don't have to expend significant conscious energy to figure out the physics involved in lifting nor
+            monitoring
+            what muscles to flex and extend as the action unfolds to bring a glass of water to our lips.
+            In addition, an intriguing finding is that the body interacts often with the subconscious, and physiological
+            indicators have been
+            measured that show the subconscious and body can form accurate hunches with respect to complicated stimuli
+            well before the conscious mind is aware of the same patterns. ("How do I decide? The Brain with David
+            Eagleman", 2015)
+        </p>
+
+        <h4>Conscious thought is expensive</h4>
+
+        <p>
+            Daniel Kahneman has described System 1 and System 2 thinking in his book, "Thinking, Fast and Slow." System
+            2
+            thinking requires focused effort to analyze a situation, for example, studying a new language.
+            System 1 thinking, on the other hand, requires far less
+            conscious effort. System 1 thinking often has to do with recognizing unexpected events and seemingly
+            automatic
+            memory recall.
+            System 1 will often, with a minimum amount of data inputs, draw a quick conclusion. Computing
+            four plus by four for an educated adult, recalling one's mother's name, and recalling the capital where one
+            lives are examples of System 1 thought patterns. As one's expertise in a subject increases, some thinking in
+            this
+            domain can shift from System 2 to System 1. One actually loses access to the details of how one arrives at
+            such
+            decisions that were once constructed with great focus. For example, if you have ridden a bicycle for many
+            years, the
+            micro-decisions of how to balance, operate the brakes, and pedal the bicycle will be largely unconscious.
+
+        </p>
+
+        <p>
+            The brain uses 20% of the body's blood supply and 20% of the oxygen, despite it only
+            accounting for 2% of the total mass of the body. TODO CITE - ("Neurons & Synapses - Memory & the Brain - The
+            Human Memory"))
+            Processing System 1 thinking is significantly more expensive calorically than System 2 thinking and
+            significantly slower. As a species that had
+            to exist on the savannahs of Africa with big game species that could quickly threaten our lives, having an
+            efficient way to
+            react to immediate existential threats with System 1 thinking was critical to our survival. System 1's
+            influence
+            is widespread as a mechanism for quick responses and as an energy saving mechanism. It is often driving our
+            behaviors
+            when we are not aware of its influence. System 2 thinking may rationalize choices made earlier by System 1
+            and not
+            be aware that the choices were not made by it directly. Fast thinking has biases that can lead to suboptimal
+            decision
+            making. System 1 favors short-term benefits to long-term ones, and is loss averse, curiously, it also tends
+            to be optimistic and overconfident when gauging one's capabilities. System 1 tends to stereotype stimuli.
+            Seeking
+            to take in inputs from many sources in one's conscious thinking can counteract many of these biases.
+
+        </p>
+
+
+        <h4>Behaviors and Habits</h4>
+
+        <p>
+            One of Merriam Webster's definitions for behavior is "anything that an organism does involving action and
+            response
+            to stimulation". (Behavior, www.merriam-webster.com)
+            Behaviors can be one-time events or repeated occasionally or frequently.</p>
+
+        <p>TODO FOGG Behavior model</p>
+
+
+        <p>
+            As behaviors become more ingrained
+            and routinized through repetition in a consistent context,
+            they form habits. Habits tend to occur unconsciously. Habits may be helpful or harmful to the individual. By
+            developing
+            an understanding of habit formation and disintegration, one can better sculpt the life one wants.
+        </p>
+
+        <p>
+            Dr. BJ Fogg has defined a two-dimensional Behavior Grid of 15 behavior states with dimensions for repetition
+            characteristics
+            and behavior type (as in new behaviors, familiar behaviors, behaviors you want to increase in duration,
+            etc.) There are
+            reports available for strategies for any given cell in the table. For example, there is one documenting how
+            one can
+            repetitively execute a familiar behavior.
+        </p>
+
+        <p>TODO The governmental model of behavior change</p>
+
+
+        <h4>Habit Formation </h4>
+
+        <p>
+            Although it is a popular understanding that habit formation occurs in twenty-one days. This has not been
+            validated
+            by experimental results.
+        </p>
+
+        <p>
+            In one study, habit formation for a healthy daily habit was studied based on self-reported user ratings, the
+            strength of an added healthy habit grew quickly then plateaued at an average of 66 days (following an
+            asymptotic curve). However, the range users reached 95% of their asymptote, was from 18-254 days,
+            highlighting the immense variability between subjects to solidify their habits.
+            Habits involving simpler actions were generally built more quickly than complex ones.
+            Habit formation was not appreciably impacted by missing a day.
+            Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build.
+
+            <cite>TODO Source: <a href="http://onlinelibrary.wiley.com/doi/10.1002/ejsp.674/abstract">Lally, P., van
                 Jaarsveld, C. H. M., Potts, H. W. W. and Wardle, J. (2010), How are habits formed: Modelling habit
                 formation in the real world. Eur. J. Soc. Psychol., 40: 998–1009. doi: 10.1002/ejsp.674</a></cite>
-            <li>Habit Formation for exercise - 4 workouts a week for six weeks was the minimum effort required to build
-                a successful new gym-based workout habit. To form the habit,
-                workouts need to be (ranked with most important criteria first):
-                <ul>
-                    <li>consistently performed</li>
-                    <li>simple and easy to understand</li>
-                    <li>fun</li>
-                </ul>
-                <cite>Source: <a href="http://link.springer.com/article/10.1007%2Fs10865-015-9640-7">Exercise habit
-                    formation
-                    in new gym members: a longitudinal study. Journal of Behavioral Medicine
-                    August 2015, Volume 38, Issue 4, pp 652-663</a></cite>
-            </li>
 
-        </ul>
+        </p>
 
-        Citations
-
-        Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior
-
-
+        <p>
+            Another study examined the habit formation for exercise workouts. Four workouts a week for six weeks was the
+            minimum effort required to build
+            a successful new gym-based workout habit. To form the habit,
+            workouts need to be (ranked with most important criteria first):</p>
+        <ol>
+            <li>consistently performed</li>
+            <li>simple and easy to understand</li>
+            <li>fun</li>
+        </ol>
+        <cite>TODO Source: <a href="http://link.springer.com/article/10.1007%2Fs10865-015-9640-7">Exercise habit
+            formation
+            in new gym members: a longitudinal study. Journal of Behavioral Medicine
+            August 2015, Volume 38, Issue 4, pp 652-663</a></cite>
 
     </main>
     <footer>
+        <h4>Citations </h4>
+
+        <p>Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior</p>
+
+        <p>The Brain from Top to Bottom. (n.d.). Retrieved February 12, 2016, from
+            http://thebrain.mcgill.ca/flash/d/d_05/d_05_cr/d_05_cr_her/d_05_cr_her.html</p>
+
+        <p>Danova, T. (2013). Morgan Stanley: 75 Billion Devices Will Be Connected To The Internet Of Things By 2020.
+            Retrieved February 10, 2016, from
+            http://www.businessinsider.com/75-billion-devices-will-be-connected-to-the-internet-by-2020-2013-10</p>
+
+        <p>Neurons & Synapses - Memory & the Brain - The Human Memory. (n.d.). Retrieved February 12, 2016, from
+            http://www.human-memory.net/brain_neurons.html</p>
+
+        <p>Visual Processing: Cortical Pathways (Section 2, Chapter 15) Neuroscience Online: An Electronic Textbook for
+            the Neurosciences | Department of Neurobiology and Anatomy - The University of Texas Medical School at
+            Houston. (n.d.). Retrieved February 12, 2016, from http://neuroscience.uth.tmc.edu/s2/chapter15.html</p>
         <nav>
             <a href="/index.html">Home</a><a href="/design-criteria.html">Next - Design Criteria</a>
         </nav>
@@ -157,3 +298,5 @@
 <!-- End Document -->
 </body>
 </html>
+
+
