--- a/detailed-design.html
+++ b/detailed-design.html
@@ -41,9 +41,10 @@
     <main>
         <h3>Version 1 Mockups</h3>
         <p>
-        <a href="mockups/v1/emotional%20onboarding.pdf">Onboarding mockups</a>
-
-        <a href="onboarding-video1-transcript.html">Onboarding Video Transcript</a>
+          <a href="mockups/v1/emotional%20onboarding.pdf">Day 0 - Onboarding mockups</a>
+        </p>
+        <p>
+          <a href="mockups/v1/daily-1st.pdf">Day 1 - First Morning mockups</a>
         </p>
 
         <p>
